--- a/gb/20/2/19/n11879760.md
+++ b/gb/20/2/19/n11879760.md
@@ -1,52 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rgtkqo2398/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rgtkqo2398/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jcaojz3768/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jcaojz3768/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jcaojz3768/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉雄陆桥3月2日与3日晚间全面封闭</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/28d7cb506248e34628bd16a111335bf3-600x400.jpg" />
 <h6>嘉义市嘉雄陆桥3月2日与3日晚间全面封闭。 （嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2020年02月19日讯】（大纪元记者李撷璎台湾嘉义报导）为提升嘉义市重要桥梁“嘉雄<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E9%99%86%E6%A1%A5.md">陆桥</a>”的<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E8%BD%A6%E9%81%93%E5%AE%89%E5%85%A8.md">车道安全</a>及用路环境，嘉义市政府将于109年3月2日起进行嘉雄陆桥路面柏油刨铺及防撞杆更换为路缘石工程。</p>
-<p>为减少对交通影响冲击缩短施工时间，将采日夜连续施工，故将实施两阶段<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E5%B0%81%E9%97%AD.md">封闭</a>，敬请用路人配合。</p>
-<p><strong>第一阶段：全面<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E5%B0%81%E9%97%AD.md">封闭</a></strong></p>
-<p>预计于3/2（一）晚上10点至3/3（二）早上6点及3/3（二）晚上10点至3/4（三）早上6点等两个夜间时段进行全面封闭，嘉雄<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E9%99%86%E6%A1%A5.md">陆桥</a>将不可通行，敬请市民朋友于夜间施工期间，利用兴业地下道、北兴陆桥或垂杨大桥改道通行。</p>
+<p>【大纪元2020年02月19日讯】（大纪元记者李撷璎台湾嘉义报导）为提升嘉义市重要桥梁“嘉雄<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E9%99%86%E6%A1%A5.md#1">陆桥</a>”的<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E8%BD%A6%E9%81%93%E5%AE%89%E5%85%A8.md#1">车道安全</a>及用路环境，嘉义市政府将于109年3月2日起进行嘉雄陆桥路面柏油刨铺及防撞杆更换为路缘石工程。</p>
+<p>为减少对交通影响冲击缩短施工时间，将采日夜连续施工，故将实施两阶段<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E5%B0%81%E9%97%AD.md#1">封闭</a>，敬请用路人配合。</p>
+<p><strong>第一阶段：全面<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E5%B0%81%E9%97%AD.md#1">封闭</a></strong></p>
+<p>预计于3/2（一）晚上10点至3/3（二）早上6点及3/3（二）晚上10点至3/4（三）早上6点等两个夜间时段进行全面封闭，嘉雄<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E9%99%86%E6%A1%A5.md#1">陆桥</a>将不可通行，敬请市民朋友于夜间施工期间，利用兴业地下道、北兴陆桥或垂杨大桥改道通行。</p>
 <p><strong>第二阶段：机车道封闭</strong></p>
 <p>嘉雄陆桥日间施作时间预定于3/3（二）起约10个工作天，施工期间将封闭两侧机慢车道，并将原有之两线快车道更改为“一线快车道”及“一线混合车道”，直至路缘石全数设置完成。机车骑士上桥时请与汽车一起利用一线汽车道行驶，建请驾驶人减速慢行，感谢配合。</p>
 <p>封闭状况的日期与时间，全面封闭（机车、汽车道均封闭）3/2（一）22:00至3/3（二）06:00，3/3（二）22:00 至3/4（三）06:00。机车道封闭，（机车请与汽车一起利用一线汽车道通行）3/3（二）06:00至3/12（四）18:00，实际施作时间将视天候因素及工程状况略作调整。◇</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/19/n11879760.htm">嘉雄陆桥3月2日与3日晚间全面封闭</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11854656.htm">波士顿防新型冠状病毒 华埠举办座谈</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11854234.htm">褒忠吃饭担 万人共享平安餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854459.htm">地方政府互抢口罩 中共国务院禁令不管用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854482.htm">武汉笼罩阴霾 英媒曝焚烧感染者尸体所致</a></li>
-> <li><a href="https://github.com/kmtpx253/djy/blob/master/gb/20/2/8/n11854331.md">公民武汉死于新病毒 美担忧北京应对危机能力</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】武汉大量病患生死线挣扎 湖北缺粮</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11876712.htm">【翻墙必看】分析：中南海内斗正全面失控</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11876354.htm">【独家】湖北文件曝光 1600人监测舆论</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11876631.htm">武汉作家封城日记：不枪毙害人精难平民愤</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861529.htm">瘟疫来势汹汹 却绕开了这些人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/4/n11843396.htm">宋仁宗怎样护卫子民走出瘟疫灾难？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875895.htm">【新闻看点】武汉市长“失踪”官场酿更大风暴</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873679.htm">方天亮：习承认生物技术谬用 中南海内斗凶猛</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11873944.htm">【拍案惊奇】俄政府文件：新病毒是重组结合体</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11874523.htm">【十字路口】专访苏紫云：中共军力能抗美？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878418.htm">【热点互动】各地封城还要封多久？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11873944.htm">【拍案惊奇】俄政府文件：新病毒是重组结合体</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873755.htm">湖北导演一家四人去世 遗书疯传染疫无床位</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873505.htm">新冠疫情下被隔离 黄晓明宅在酒店看电影</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873581.htm">疫情下横店片场复工 赵丽颖杨幂的粉丝齐抗议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873637.htm">手臂写含敏感数字密码 张智霖防疫招数引围观</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11874966.htm">台女主播深夜下班被跟车 机警开往派出所</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/17/5/29/n9201013.md#1">5岁男孩骑单车被撞死 多伦多单车道安全亟待解决</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/19/3/14/n11112846.md#1">青海陆桥平面化提前通车 缝合地区发展</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/19/10/18/n11595936.md#1">高天韵：大陆桥梁事故不断 古桥却演不老传奇</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/19/11/7/n11639589.md#1">铁高博爱陆桥局部改建施工前说明会 12月动工</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/20/2/14/n11868558.md#1">孝感防控升级 所有屋苑全封闭 居民禁止外出</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/20/2/14/n11869043.md#1">打造友善步行空间  山川琉璃吊桥18日封闭改建</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/22/n12828035.md#1">全中运防疫大升级 五座智能洁净门 每座可消毒1万人次</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/22/n12827755.md#1">嘉市YouBike 2.0 前30分钟免费优惠延长至6月</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/22/n12827684.md#1">农业嘉义队成立 预见嘉义农业闪亮的未来</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/22/n12827659.md#1">林内紫斑蝶季 清明连假邀您来赏蝶</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rgtkqo2398/djy/blob/master/gb/20/2/19/n11879760.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rgtkqo2398/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rgtkqo2398/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9947938.md#1" target="_blank">张易：批马篇（二）共产主义是贫穷的根源</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/13/n12809133.md#1">东方的辛德勒—约翰?拉贝</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820656.md#1">【未解之谜】临死体验后发生的奇迹</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12822699.md#1">【时事军事】中共海军肚子大 美国海军拳头大</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/22/n12826726.md#1">【拍案惊奇】北京画外交红线 川普建社媒平台</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824520.md#1">【财商天下】存活千百年 日本企业长寿密码</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12823243.md#1">【新闻看点】两战狼疯狂布林肯吃惊 习看低拜登？</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12823419.md#1">美议员：是时候把中共赶出联合国安理会了</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12823519.md#1">美中首次会晤后 美国官方声明全文翻译</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12823173.md#1">质疑镜头遭剪辑沦为陪衬 张靓颖暗讽综艺节目</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/21/n12825025.md#1">《餐车》回到原点 黄秋生因KID一句话走心</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/21/n12826073.md#1">感佩台湾垃圾分类 杜汶泽：爱一地犹如爱一人</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12821208.md#1">(G)I-DLE穗珍被控霸凌 公司最终宣布对簿公堂</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12823452.md#1">《查克史奈德之正义联盟》影评：DC的史诗巨作！</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824338.md#1">鲑鱼5大营养补脑、护心血管 3类人不宜多吃</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12822810.md#1">春分是养生关键 不只要养肝！1图看懂怎么吃</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12818954.md#1">癌症病人能打新冠疫苗吗？医师：一类癌症要谨慎</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824292.md#1">【重播】变种病毒感染比例大增 第四波疫情恐将至？</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/21/n12825217.md#1">西澳70头虎鲸围攻16米长蓝鲸 搏斗4小时</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jcaojz3768/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jcaojz3768/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/19/n11879760.htm">嘉雄陆桥3月2日与3日晚间全面封闭</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jcaojz3768/djy/blob/master/gb/20/2/19/n11879760.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jcaojz3768/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jcaojz3768/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jcaojz3768/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
